Fix some content misalignment

--- a/source.css
+++ b/source.css
@@ -250,3 +250,12 @@
 .Si7Nvc {
     padding-left: 156px;
 }
+.rNl3nf .qcTKEe {
+    padding-left: 0;
+}
+.qcTKEe .D0HoIc {
+    width: 580px;
+    margin: auto;
+    -moz-box-pack: start;
+    justify-content: flex-start;
+}
